<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="view_my_reservations">view my reservations</string>
    <string name="view_profile">view profile</string>
    <string name="request_car">request car</string>
    <string name="search_user">Search Users</string>
    <string name="view_my_profile">View my profile</string>
    <string name="admin_screen">Admin Screen</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="view_reservations">View Reservations</string>
    <string name="search_cars1">Search Cars</string>
    <string name="view_available_cars">View Available Cars</string>
    <string name="logout_rm">Logout</string>
    <string name="rm_homescreen">Rental Manager Home Screen</string>
    <string name="search_cars">Search Cars</string>
    <string name="searchUser">Search</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="mm_dd_yy">MM/DD/YY</string>
    <string name="_12_hours_format">12 HOURS FORMAT</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="last_name">Last name:</string>
    <string name="uta_id">UTA id:</string>
    <string name="first_name">First name:</string>
    <string name="rental_priviledge_status">Rental priviledge status:</string>
    <string name="phone">Phone:</string>
    <string name="role">Role:</string>
    <string name="email">email:</string>
    <string name="street_address">Street address:</string>
    <string name="city">City:</string>
    <string name="zip_code">Zip code:</string>
    <string name="capacity">Capacity -</string>
    <string name="reservation_number">Reservation number -</string>
    <string name="car_name">Car Name -</string>
    <string name="car_number">Car number -</string>
    <string name="startdate">StartDate -</string>
    <string name="end_time">End Time -</string>
    <string name="starttime">StartTime -</string>
    <string name="end_date">End Date -</string>
    <string name="delete">Delete</string>
    <string name="aac_member_status">AAC Member status -</string>
    <string name="totalcost">TotalCost -</string>
    <string name="date">Date:</string>
    <string name="time">Time</string>
    <string name="siriusxm">SiriusXM</string>
    <string name="onstar">OnStar</string>
    <string name="duration">Duration</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="lastname">LastName:</string>
    <string name="search">Search</string>
    <string name="update_user_role">Update User Role</string>
    <string name="State">state</string>
</resources>