<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteReservationGUI">

    <EditText
        android:id="@+id/totalCost2"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/totalcost"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTime2" />

    <EditText
        android:id="@+id/endTime2"
        android:layout_width="132dp"
        android:layout_height="44dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/end_time"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDate2" />

    <EditText
        android:id="@+id/endDate2"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/end_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTime2" />

    <EditText
        android:id="@+id/startTime2"
        android:layout_width="135dp"
        android:layout_height="44dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/starttime"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDate2" />

    <EditText
        android:id="@+id/startDate2"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/startdate"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />

    <EditText
        android:id="@+id/reservationnumber "
        android:layout_width="187dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/reservation_number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userScreenToolbar4" />

    <EditText
        android:id="@+id/carname2"
        android:layout_width="108dp"
        android:layout_height="43dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/car_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carNumber2" />

    <EditText
        android:id="@+id/capacity2"
        android:layout_width="107dp"
        android:layout_height="47dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/capacity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carname2" />

    <EditText
        android:id="@+id/carNumber2"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/car_number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservationnumber " />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/userScreenToolbar4"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="View Reservation Details" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="121dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/siriusxm"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capacity2" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="122dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/onstar"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/duration"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCost2" />

    <Button
        android:id="@+id/logout_viewResDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resNumberVRD"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/reservationnumber "
        app:layout_constraintTop_toBottomOf="@+id/userScreenToolbar4" />

    <TextView
        android:id="@+id/carNumberVRD"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/carNumber2"
        app:layout_constraintTop_toBottomOf="@+id/resNumberVRD" />

    <TextView
        android:id="@+id/carNameVRD"
        android:layout_width="73dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/carname2"
        app:layout_constraintTop_toBottomOf="@+id/carNumberVRD" />

    <TextView
        android:id="@+id/capacityVRD"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/capacity2"
        app:layout_constraintTop_toBottomOf="@+id/carNameVRD" />

    <TextView
        android:id="@+id/siriusXMVRD"
        android:layout_width="69dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/capacityVRD" />

    <TextView
        android:id="@+id/onstarVRD"
        android:layout_width="68dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName10"
        app:layout_constraintTop_toBottomOf="@+id/siriusXMVRD" />

    <TextView
        android:id="@+id/startDateVRD"
        android:layout_width="73dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/startDate2"
        app:layout_constraintTop_toBottomOf="@+id/onstarVRD" />

    <TextView
        android:id="@+id/startTimeVRD"
        android:layout_width="76dp"
        android:layout_height="33dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toEndOf="@+id/startTime2"
        app:layout_constraintTop_toBottomOf="@+id/startDateVRD" />

    <TextView
        android:id="@+id/endDateVRD"
        android:layout_width="71dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/endDate2"
        app:layout_constraintTop_toBottomOf="@+id/startTimeVRD" />

    <TextView
        android:id="@+id/endTimeVRD"
        android:layout_width="82dp"
        android:layout_height="26dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/endTime2"
        app:layout_constraintTop_toBottomOf="@+id/endDateVRD" />

    <TextView
        android:id="@+id/totalCostVRD"
        android:layout_width="78dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/totalCost2"
        app:layout_constraintTop_toBottomOf="@+id/endTimeVRD" />

    <TextView
        android:id="@+id/durationVRD"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName11"
        app:layout_constraintTop_toBottomOf="@+id/totalCostVRD" />
</androidx.constraintlayout.widget.ConstraintLayout>