<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMainScreen">

    <Button
        android:id="@+id/viewprofileBtn_admin"
        android:layout_width="237dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/view_my_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchUsers"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/searchUsers"
        android:layout_width="123dp"
        android:layout_height="56dp"
        android:layout_marginEnd="20dp"
        android:text="@string/search_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminScreenToolbar"
        app:layout_constraintVertical_bias="0.311" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/adminScreenToolbar"
        android:layout_width="410dp"
        android:layout_height="77dp"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        android:foregroundGravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_screen"
        android:textColor="#F8F2F2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/adminScreenToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutBtn_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/adminScreenToolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter last name..."
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/searchUsers"
        app:layout_constraintTop_toTopOf="@+id/searchUsers" />
</androidx.constraintlayout.widget.ConstraintLayout>